@@ -1,4 +1,5 @@
 0.7.0 - currently working on
+- [#3340] Change: Move the creation of the headers and the body out of the loop in abstractMailer::send
 - [#3328] Fix: Ghost acquired via getNewGhost must not be loaded
 - [#3317] Fix: Check for object comparisons / recursive nesting
 - [#3320] Fix: Unbreak GMX by changing the default encoding for e-mails from base64 back to quoted-printable
